# tiagopro-back-massage

./: README.md  frames_2025-01-25_12.34.53.gv  massage.world  massage_bench.world  massage_box.world  massage_male.world  massage_world.world  massagebox.scene
insta/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/back_detection/: package.xml  setup.cfg  setup.py
src/back_detection/back_detection/: back_detector.py  move.py
src/cartesian_interpolation/: CMakeLists.txt  package.xml
src/cartesian_interpolation/include/cartesian_interpolation/: fk_solver.hpp  ik_solver.hpp  nullspace_exploration.hpp
src/cartesian_interpolation/launch/: nullspace_explorer.launch.py  visual_tapping.launch.py
src/cartesian_interpolation/src/: fk_solver.cpp  ik_solver.cpp  nullspace_explorer.cpp
src/joint_interpolation/: CMakeLists.txt  package.xml
src/joint_interpolation/include/joint_interpolation/: nullspace_exploration.hpp
src/joint_interpolation/launch/: visual_tapping.launch.py
src/joint_interpolation/src/: joint_interpolator.cpp  joint_nullspace_explorer.cpp
src/test_cpp/: CMakeLists.txt  package.xml
src/test_cpp/include/test_cpp/: fk_solver.hpp  ik_solver.hpp  nullspace_exploration.hpp
src/test_cpp/launch/: ik_solver.launch.py  launch_facepalm.py  launch_scratch.py  manipulability.launch.py  nullspace_explorer.launch.py  redundancy_stepper.launch.py
src/test_cpp/src/: facepalm.cpp  fk_solver.cpp  fk_solver.hpp  ik_solver.cpp  ik_solver2.cpp  manipulability.cpp  nullspace_explorer.cpp  pch.h  redundancy_stepper.cpp  scratch_calc.cpp  scratch_calc.hpp  test_interpolator.cpp
src/test_py/: package.xml  setup.py
src/test_py/launch/: arm_mover.launch.py  facepalm.launch.py
src/test_py/test_py/: arm_mover.py  facepalm.py
src/trajectory/: package.xml  setup.py
src/trajectory/launch/: interpolator.launch.py  manipulability_index.launch.py  move.launch.py  tapping.launch.py  visual_tapping.launch.py
src/trajectory/trajectory/: arm_move.py  back_detector.py  fk_solver.py  ik_solver.py  impedance_gain_adjuster.py  left_tapper.py  move.py  relax.py  right_tapper.py  rviz_visualizer.py  sensor_ft.py  single_ik_solver.py  state_receiver.py  tapping.py  torso_lifter.py
