<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="darius.kammawie@hotmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>kinematics_interface</depend>

  <depend>moveit_kinematics</depend>  
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>pluginlib</depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
